# DjangoReactPortfolio

./: .env  .gitignore  build.sh  create_superuser.py  db.sqlite3  package-lock.json  package.json  pyproject.toml  requirements.txt
myportfolio/: settings.py  wsgi.py
src/Api/: api.js
src/components/AboutMe/: AboutMe.jsx
src/components/EmailMe/: Email.jsx
src/components/Footer/: Footer.js
src/components/Hero/: Intro.jsx
src/components/MyWork/: projects.css  projects.jsx
src/components/SkillBars/: progress.jsx
