[tool.poetry]
name = "djangoreactportfolio"
version = "0.1.0"
description = "mon portfolio"
authors = ["HAMA Barhamou <hamabarhamou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.0.0"
django-ckeditor = "^6.5.1"
django-tinymce = "^3.6.1"
django-js-asset = "^2.0.0"
pillow = "^9.5.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core","poetry==1.1.14"]
build-backend = "poetry.core.masonry.api"
